# term_typing_ontology_enrichment_exp_1

./: README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4bzdm69cv02apwis5cvnbnk717k14kgk-source  djhxq4zifybj44npza96ilf1sffchp7a-source
src/template_python_package/: template_python_package.py  test_script.py
src/template_python_package/test_dir_a/: dir_a_test.py
src/term_typing_ontology_enrichment_exp_1/: test_script.py
src/term_typing_ontology_enrichment_exp_1/test_dir_a/: .dir_a_test.py.swp
