[project]
name = "template_python_package"
description = "Template Python Package and development environment for Upal Bhattacharya relying on direnv (using nix flakes) and setuptools (NOT Poetry or poetry2nix)"
version = "0.1.0"
authors = [
		{ name = "Upal Bhattacharya", email = "upal.bhattacharya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"