[project]
name = "term_typing_ontology_enrichment_exp_1"
description = "Initial experimentation for term-typing-driven ontology enrichment using GPT-based LLMs"
version = "0.1.0"
authors = [
		{ name = "Upal Bhattacharya", email = "upal.bhattacharya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"